removed big file

--- a/simworld_gym/SimWorldGym/simworld_gym/utils/WorldGeneration.ipynb
+++ b/simworld_gym/SimWorldGym/simworld_gym/utils/WorldGeneration.ipynb
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "from gym_citynav.utils.unrealcv_basic_with_traffic import UnrealCV\n",
+    "from gym_citynav.utils.unrealcv_basic import UnrealCV\n",
     "from gym_citynav.utils.environment_generator import EnvironmentGenerator\n",
     "import clpg\n",
     "# from visualization import main\n",
